@@ -5,6 +5,8 @@
  <utilities>
   <utility interface="Products.CMFCore.interfaces.IActionsTool"
      object="portal_actions"/>
+  <utility interface="Products.CMFCore.interfaces.ICatalogTool"
+     object="portal_catalog"/>
   <utility interface="Products.CMFCore.interfaces.ICookieCrumbler"
      object="cookie_authentication"/>
   <utility interface="Products.CMFCore.interfaces.IDiscussionTool"
@@ -20,12 +22,16 @@
   <utility interface="Products.CMFCore.interfaces.IRegistrationTool"
      object="portal_registration"/>
   <utility interface="Products.CMFCore.interfaces.ISiteRoot" object=""/>
+  <utility interface="Products.CMFCore.interfaces.ISkinsTool"
+     object="portal_skins"/>
   <utility interface="Products.CMFCore.interfaces.ISyndicationTool"
      object="portal_syndication"/>
   <utility interface="Products.CMFCore.interfaces.IUndoTool"
      object="portal_undo"/>
   <utility interface="Products.CMFCore.interfaces.IURLTool"
      object="portal_url"/>
+  <utility interface="Products.CMFCore.interfaces.IWorkflowTool"
+     object="portal_workflow"/>
   <utility interface="Products.GenericSetup.interfaces.ISetupTool"
      object="portal_setup"/>
   <utility interface="Products.MailHost.interfaces.IMailHost"
