@@ -1,11 +1,11 @@
 ##parameters=workflow_action, comment=''
 ##title=Modify the status of a content object
 ##
-from Products.CMFCore.utils import getToolByName
+from Products.CMFCore.utils import getUtilityByInterfaceName
 from Products.CMFDefault.exceptions import WorkflowException
 from Products.CMFDefault.utils import Message as _
 
-wtool = getToolByName(script, 'portal_workflow')
+wtool = getUtilityByInterfaceName('Products.CMFCore.interfaces.IWorkflowTool')
 
 try:
     wtool.doActionFor(context, workflow_action, comment=comment)
