@@ -1,6 +1,5 @@
 ##parameters=
 ##
-from Products.CMFCore.utils import getToolByName
 from Products.CMFCore.utils import getUtilityByInterfaceName
 from Products.CMFDefault.utils import decode
 from Products.CMFDefault.utils import Message as _
@@ -8,7 +7,7 @@ from Products.CMFDefault.utils import Message as _
 atool = getUtilityByInterfaceName('Products.CMFCore.interfaces.IActionsTool')
 mtool = getUtilityByInterfaceName('Products.CMFCore.interfaces.IMembershipTool')
 ptool = getUtilityByInterfaceName('Products.CMFCore.interfaces.IPropertiesTool')
-stool = getToolByName(script, 'portal_skins')
+stool = getUtilityByInterfaceName('Products.CMFCore.interfaces.ISkinsTool')
 
 
 if stool.updateSkinCookie():
