@@ -17,9 +17,11 @@ import unittest
 import Testing
 
 from AccessControl.SecurityManagement import newSecurityManager
+from zope.component import getSiteManager
 from zope.interface.verify import verifyClass
 from zope.testing.cleanup import cleanUp
 
+from Products.CMFCore.interfaces import IWorkflowTool
 from Products.CMFCore.PortalFolder import PortalFolder
 from Products.CMFCore.tests.base.dummy import DummyFolder
 from Products.CMFCore.tests.base.dummy import DummySite
@@ -83,7 +85,8 @@ class MembershipToolSecurityTests(SecurityTest):
         mtool = self.site.portal_membership
         members = self.site._setObject( 'Members', PortalFolder('Members') )
         acl_users = self.site._setObject( 'acl_users', DummyUserFolder() )
-        wtool = self.site._setObject( 'portal_workflow', DummyTool() )
+        wtool = DummyTool()
+        getSiteManager().registerUtility(wtool, IWorkflowTool)
 
         # permission
         mtool.createMemberArea('user_foo')
