@@ -5,8 +5,9 @@ Products.CMFDefault Changelog
 ------------------------
 
 - tools: Converted several tools into utilities.
-  ActionsTool, CookieCrumbler, MemberDataTool, MembershipTool, RegistrationTool
-  and URLTool are now local utilities.
+  ActionsTool, CatalogTool, CookieCrumbler, MemberDataTool, MembershipTool,
+  RegistrationTool, SkinsTool, URLTool and WorkflowTool are now local
+  utilities.
 
 - skins and browser views: setRedirect now checks Action conditions.
 
